# SR05-activite-prog

./: .clang-format  CMakeLists.txt  README.md  README.txt
include/: common.hpp  emitter.hpp  listener.hpp  main.hpp  utils.hpp
src/: emitter.cpp  listener.cpp  main.cpp  utils.cpp
